<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FF9800"
    android:orientation="vertical">

    <EditText
        android:id="@+id/emailEtRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/contrasenaEtRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPersonName|textPassword|textEmailAddress" />

    <EditText
        android:id="@+id/repetirContrasenaEtRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/repetir_contrasena"
        android:inputType="textPassword" />
</LinearLayout>